syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Identity.Enums";

package edoxa.services.identity;

enum EnumCountry {
  option allow_alias = true;
  ENUM_COUNTRY_NONE = 0;
  ENUM_COUNTRY_CANADA = 1;
  ENUM_COUNTRY_C_A_N = 1;
  ENUM_COUNTRY_C_A = 1;
  ENUM_COUNTRY_UNITED_STATES = 2;
  ENUM_COUNTRY_U_S_A = 2;
  ENUM_COUNTRY_U_S = 2;
  ENUM_COUNTRY_ALL = -1;
}

enum EnumCanadaProvince {
  option allow_alias = true;
  ENUM_CANADA_PROVINCE_NONE = 0;
  ENUM_CANADA_PROVINCE_ALBERTA = 1;
  ENUM_CANADA_PROVINCE_A_B = 1;
  ENUM_CANADA_PROVINCE_BRITISH_COLUMBIA = 2;
  ENUM_CANADA_PROVINCE_B_C = 2;
  ENUM_CANADA_PROVINCE_MANITOBA = 3;
  ENUM_CANADA_PROVINCE_M_B = 3;
  ENUM_CANADA_PROVINCE_NEW_BRUNSWICK = 4;
  ENUM_CANADA_PROVINCE_N_B = 4;
  ENUM_CANADA_PROVINCE_NEWFOUNDLAND_AND_LABRADOR = 5;
  ENUM_CANADA_PROVINCE_N_L = 5;
  ENUM_CANADA_PROVINCE_NOVA_SCOTIA = 6;
  ENUM_CANADA_PROVINCE_N_S = 6;
  ENUM_CANADA_PROVINCE_ONTARIO = 7;
  ENUM_CANADA_PROVINCE_O_N = 7;
  ENUM_CANADA_PROVINCE_PRINCE_EDWARD_ISLAND = 8;
  ENUM_CANADA_PROVINCE_P_E = 8;
  ENUM_CANADA_PROVINCE_QUEBEC = 9;
  ENUM_CANADA_PROVINCE_Q_C = 9;
  ENUM_CANADA_PROVINCE_SASKATCHEWAN = 10;
  ENUM_CANADA_PROVINCE_S_K = 10;
  ENUM_CANADA_PROVINCE_NORTHWEST_TERRITOIRES = 11;
  ENUM_CANADA_PROVINCE_N_T = 11;
  ENUM_CANADA_PROVINCE_NUNAVUT = 12;
  ENUM_CANADA_PROVINCE_N_U = 12;
  ENUM_CANADA_PROVINCE_YUKON = 13;
  ENUM_CANADA_PROVINCE_Y_T = 13;
  ENUM_CANADA_PROVINCE_ALL = -1;
}

enum EnumUnitedStatesState {
  option allow_alias = true;
  ENUM_UNITED_STATES_STATE_NONE = 0;
  ENUM_UNITED_STATES_STATE_ALABAMA = 1;
  ENUM_UNITED_STATES_STATE_A_L = 1;
  ENUM_UNITED_STATES_STATE_ALASKA = 2;
  ENUM_UNITED_STATES_STATE_A_K = 2;
  ENUM_UNITED_STATES_STATE_ARIZONA = 3;
  ENUM_UNITED_STATES_STATE_A_Z = 3;
  ENUM_UNITED_STATES_STATE_ARKANSAS = 4;
  ENUM_UNITED_STATES_STATE_A_R = 4;
  ENUM_UNITED_STATES_STATE_CALIFORNIA = 5;
  ENUM_UNITED_STATES_STATE_C_A = 5;
  ENUM_UNITED_STATES_STATE_COLORADO = 6;
  ENUM_UNITED_STATES_STATE_C_O = 6;
  ENUM_UNITED_STATES_STATE_CONNECTICUT = 7;
  ENUM_UNITED_STATES_STATE_C_T = 7;
  ENUM_UNITED_STATES_STATE_DELAWARE = 8;
  ENUM_UNITED_STATES_STATE_D_E = 8;
  ENUM_UNITED_STATES_STATE_FLORIDA = 9;
  ENUM_UNITED_STATES_STATE_F_L = 9;
  ENUM_UNITED_STATES_STATE_GEORGIA = 10;
  ENUM_UNITED_STATES_STATE_G_A = 10;
  ENUM_UNITED_STATES_STATE_HAWAII = 11;
  ENUM_UNITED_STATES_STATE_H_I = 11;
  ENUM_UNITED_STATES_STATE_IDAHO = 12;
  ENUM_UNITED_STATES_STATE_I_D = 12;
  ENUM_UNITED_STATES_STATE_ILLINOIS = 13;
  ENUM_UNITED_STATES_STATE_I_L = 13;
  ENUM_UNITED_STATES_STATE_INDIANA = 14;
  ENUM_UNITED_STATES_STATE_I_N = 14;
  ENUM_UNITED_STATES_STATE_IOWA = 15;
  ENUM_UNITED_STATES_STATE_I_A = 15;
  ENUM_UNITED_STATES_STATE_KANSAS = 16;
  ENUM_UNITED_STATES_STATE_K_S = 16;
  ENUM_UNITED_STATES_STATE_KENTUCKY = 17;
  ENUM_UNITED_STATES_STATE_K_Y = 17;
  ENUM_UNITED_STATES_STATE_LOUISIANA = 18;
  ENUM_UNITED_STATES_STATE_L_A = 18;
  ENUM_UNITED_STATES_STATE_MAINE = 19;
  ENUM_UNITED_STATES_STATE_M_E = 19;
  ENUM_UNITED_STATES_STATE_MARYLAND = 20;
  ENUM_UNITED_STATES_STATE_M_D = 20;
  ENUM_UNITED_STATES_STATE_MASSACHUSETTS = 21;
  ENUM_UNITED_STATES_STATE_M_A = 21;
  ENUM_UNITED_STATES_STATE_MICHIGAN = 22;
  ENUM_UNITED_STATES_STATE_M_I = 22;
  ENUM_UNITED_STATES_STATE_MINNESOTA = 23;
  ENUM_UNITED_STATES_STATE_M_N = 23;
  ENUM_UNITED_STATES_STATE_MISSISSIPPI = 24;
  ENUM_UNITED_STATES_STATE_M_S = 24;
  ENUM_UNITED_STATES_STATE_MISSOURI = 25;
  ENUM_UNITED_STATES_STATE_M_O = 25;
  ENUM_UNITED_STATES_STATE_MONTANA = 26;
  ENUM_UNITED_STATES_STATE_M_T = 26;
  ENUM_UNITED_STATES_STATE_NEBRASKA = 27;
  ENUM_UNITED_STATES_STATE_N_E = 27;
  ENUM_UNITED_STATES_STATE_NEVADA = 28;
  ENUM_UNITED_STATES_STATE_N_V = 28;
  ENUM_UNITED_STATES_STATE_NEW_HAMPSHIRE = 29;
  ENUM_UNITED_STATES_STATE_N_H = 29;
  ENUM_UNITED_STATES_STATE_NEW_JERSEY = 30;
  ENUM_UNITED_STATES_STATE_N_J = 30;
  ENUM_UNITED_STATES_STATE_NEW_MEXICO = 31;
  ENUM_UNITED_STATES_STATE_N_M = 31;
  ENUM_UNITED_STATES_STATE_NEW_YORK = 32;
  ENUM_UNITED_STATES_STATE_N_Y = 32;
  ENUM_UNITED_STATES_STATE_NORTH_CAROLINA = 33;
  ENUM_UNITED_STATES_STATE_N_C = 33;
  ENUM_UNITED_STATES_STATE_NORTH_DAKOTA = 34;
  ENUM_UNITED_STATES_STATE_N_D = 34;
  ENUM_UNITED_STATES_STATE_OHIO = 35;
  ENUM_UNITED_STATES_STATE_O_H = 35;
  ENUM_UNITED_STATES_STATE_OKLOHOMA = 36;
  ENUM_UNITED_STATES_STATE_O_K = 36;
  ENUM_UNITED_STATES_STATE_OREGON = 37;
  ENUM_UNITED_STATES_STATE_O_R = 37;
  ENUM_UNITED_STATES_STATE_PENNSYLVANIA = 38;
  ENUM_UNITED_STATES_STATE_P_A = 38;
  ENUM_UNITED_STATES_STATE_RHODE_ISLAND = 39;
  ENUM_UNITED_STATES_STATE_R_I = 39;
  ENUM_UNITED_STATES_STATE_SOUTH_CAROLINA = 40;
  ENUM_UNITED_STATES_STATE_S_C = 40;
  ENUM_UNITED_STATES_STATE_SOUTH_DAKOTA = 41;
  ENUM_UNITED_STATES_STATE_S_D = 41;
  ENUM_UNITED_STATES_STATE_TENNESSEE = 42;
  ENUM_UNITED_STATES_STATE_T_N = 42;
  ENUM_UNITED_STATES_STATE_TEXAS = 43;
  ENUM_UNITED_STATES_STATE_T_X = 43;
  ENUM_UNITED_STATES_STATE_UTAH = 44;
  ENUM_UNITED_STATES_STATE_U_T = 44;
  ENUM_UNITED_STATES_STATE_VERMONT = 45;
  ENUM_UNITED_STATES_STATE_V_T = 45;
  ENUM_UNITED_STATES_STATE_VERGINIA = 46;
  ENUM_UNITED_STATES_STATE_V_A = 46;
  ENUM_UNITED_STATES_STATE_WASHINGTON = 47;
  ENUM_UNITED_STATES_STATE_W_A = 47;
  ENUM_UNITED_STATES_STATE_WEST_VIRGINIA = 48;
  ENUM_UNITED_STATES_STATE_W_V = 48;
  ENUM_UNITED_STATES_STATE_WISCONSIN = 49;
  ENUM_UNITED_STATES_STATE_W_I = 49;
  ENUM_UNITED_STATES_STATE_WYOMING = 50;
  ENUM_UNITED_STATES_STATE_W_Y = 50;
  ENUM_UNITED_STATES_STATE_ALL = -1;
}

enum EnumGender {
  ENUM_GENDER_NONE = 0;
  ENUM_GENDER_MALE = 1;
  ENUM_GENDER_FEMALE = 2;
  ENUM_GENDER_OTHER = 4;
  ENUM_GENDER_ALL = -1;
}

enum EnumAddressType {
  ENUM_ADDRESS_TYPE_NONE = 0;
  ENUM_ADDRESS_TYPE_PRINCIPAL = 1;
  ENUM_ADDRESS_TYPE_BILLING = 2;
  ENUM_ADDRESS_TYPE_DELIVERY = 4;
  ENUM_ADDRESS_TYPE_ALL = -1;
}